--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+base64 = "0.22.1"
+image = { version = "0.25", default-features = false, features = ["png"]}
+
 simple_logger = "5.0.0"
 log = "0.4"
 byteorder = "1"
