replace crab_nbt with fastnbt

--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -29,6 +29,5 @@ mio = { version = "1.0.1", features = ["os-poll", "net"]}
 crossbeam-channel = "0.5.13"
 uuid = "1.10"
 toml = "0.8.17"
-crab_nbt = "0.1.2"
-
+fastnbt = "2.5.0"
 
