--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -27,7 +27,7 @@ simple_logger = "5.0.0"
 log = "0.4"
 mio = { version = "1.0.1", features = ["os-poll", "net"]}
 crossbeam-channel = "0.5.13"
-uuid = "1.10"
+uuid = { version = "1.10", features = [ "serde" ]}
 toml = "0.8.17"
 fastnbt = "2.5.0"
 
