--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -29,7 +29,7 @@ mio = { version = "1.0.1", features = ["os-poll", "net"]}
 crossbeam-channel = "0.5.13"
 uuid = "1.10"
 toml = "0.8.17"
-fastnbt = "2.5.0"
+fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 fastsnbt = "0.2"
 
 
