--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,9 @@
 		// mount SSH config & public keys from host to enable SSH-based Git remotes
 		"source=${localEnv:HOME}${localEnv:USERPROFILE}/.ssh,target=/home/vscode/.ssh,readonly,type=bind"
 	],
+	"forwardPorts": [
+		25565
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": [
