--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -15,6 +15,9 @@ serde_json = "1.0"
 thiserror = "1.0.63"
 log = "0.4"
 
+# for text component
+fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
+
 # encryption
 aes = "0.8.4"
 cfb8 = "0.8.1"
