--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -11,8 +11,13 @@ pumpkin-registry = { path = "../pumpkin-registry"}
 # config
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.8.19"
+
+pollster = "0.3.0"
 
 rand = "0.8.5"
+
+num-bigint = "0.4.6"
 
 # encryption
 rsa = "0.9.6"
@@ -20,12 +25,19 @@ rsa-der = "0.3.0"
 
 flate2 = "1.0.30"
 
+# authentication
+reqwest = { version = "0.12.5", features = ["json"]}
+
+sha1 = "0.10.6"
+digest = "=0.11.0-pre.9"
+
 thiserror = "1.0.63"
 
 # icon loading
 base64 = "0.22.1"
 image = { version = "0.25", default-features = false, features = ["png"]}
 
+# logging
 simple_logger = "5.0.0"
 log = "0.4"
 
@@ -33,8 +45,7 @@ log = "0.4"
 mio = { version = "1.0.1", features = ["os-poll", "net"]}
 crossbeam-channel = "0.5.13"
 
-uuid = "1.10"
-toml = "0.8.19"
+uuid = { version = "1.10", features = ["serde"]}
 
 
 
