--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -13,8 +13,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8.19"
 
-pollster = "0.3.0"
-
 rand = "0.8.5"
 
 num-bigint = "0.4.6"
@@ -26,7 +24,7 @@ rsa-der = "0.3.0"
 flate2 = "1.0.30"
 
 # authentication
-reqwest = { version = "0.12.5", features = ["json"]}
+reqwest = { version = "0.12.5", features = ["json", "blocking"]}
 
 sha1 = "0.10.6"
 digest = "=0.11.0-pre.9"
