Remove reqwest blocking feature

--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -8,3 +8,4 @@ pumpkin-protocol = { path = "../pumpkin-protocol"}
 fastanvil = "0.31"
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 fastsnbt = "0.2"
+tokio.workspace = true
