--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -15,6 +15,8 @@ serde = { version = "1.0", features = ["derive"] }
 # to parse strings to json responses
 serde_json = "1.0"
 
+flate2 = "1.0.30"
+
 thiserror = "1.0.63"
 log = "0.4"
 num-traits = "0.2"
