--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -17,6 +17,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8.19"
 
+bytes = "1.7"
+
 rand = "0.8.5"
 
 num-traits = "0.2"
