--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -15,3 +15,4 @@ flate2 = "1.0.31"
 serde = { version = "1.0.205", features = ["derive"] }
 lazy_static = "1.5.0"
 serde_json = "1.0.122"
+rayon = "1.10.0"
