Add dhat and rayon
- Set up dhat, when dhat-heap feature, the dhap memory profiler will run. Due to this tokio needs to be manually built.
- Rayon now explicitly built outside of tokio runtime.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ version = "0.1.0"
 edition = "2021"
 
 [profile.release]
-strip = true
+debug = 1
 lto = true
 codegen-units = 1
 
 [workspace.dependencies]
 tokio = { version = "1.39.2", features = ["net", "macros", "rt-multi-thread", "fs", "io-util"] }
+rayon = "1.10.0"
