--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -8,6 +8,7 @@ edition.workspace = true
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 fastsnbt = "0.2"
 tokio.workspace = true
+rayon.workspace = true
 itertools = "0.13.0"
 thiserror = "1.0.63"
 futures = "0.3.30"
@@ -15,4 +16,3 @@ flate2 = "1.0.31"
 serde = { version = "1.0.205", features = ["derive"] }
 lazy_static = "1.5.0"
 serde_json = "1.0.122"
-rayon = "1.10.0"
