--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -16,3 +16,6 @@ flate2 = "1.0.31"
 serde = { version = "1.0.205", features = ["derive"] }
 lazy_static = "1.5.0"
 serde_json = "1.0.122"
+
+num-traits = "0.2"
+num-derive = "0.4"
