Added Player inventory (WIP)

--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -6,3 +6,6 @@ edition.workspace = true
 [dependencies]
 num-traits = "0.2"
 num-derive = "0.4"
+
+# For items
+pumpkin-world = { path = "../pumpkin-world"}
