add required feature to tokio

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ lto = true
 codegen-units = 1
 
 [workspace.dependencies]
-tokio = { version = "1.39.2", features = ["net", "macros", "rt-multi-thread", "fs", "io-util"] }
+tokio = { version = "1.39.2", features = ["net", "macros", "rt-multi-thread", "fs", "io-util", "sync"] }
 rayon = "1.10.0"
