--- a/pumpkin-text/Cargo.toml
+++ b/pumpkin-text/Cargo.toml
@@ -6,4 +6,4 @@ edition.workspace = true
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
-uuid = "1.10"
+uuid.workspace = true
