--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -13,7 +13,7 @@ dhat-heap = ["dhat"]
 dhat = { version = "0.3.3", optional = true }
 
 # pumpkin
-pumpkin-text = { path = "../pumpkin-text" }
+pumpkin-core = { path = "../pumpkin-core"}
 pumpkin-inventory = { path = "../pumpkin-inventory"}
 pumpkin-world = { path = "../pumpkin-world"}
 pumpkin-entity = { path = "../pumpkin-entity"}
