--- a/pumpkin-core/Cargo.toml
+++ b/pumpkin-core/Cargo.toml
@@ -7,3 +7,4 @@ edition.workspace = true
 serde = { version = "1.0", features = ["derive"] }
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 uuid.workspace = true
+colored = "2"
