--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -19,7 +19,7 @@ serde_json = "1.0"
 flate2 = "1.0.33"
 
 thiserror = "1.0.63"
-log = "0.4"
+log.workspace = true
 num-traits = "0.2"
 num-derive = "0.4"
 
