--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -16,6 +16,8 @@ flate2 = "1.0.33"
 serde = { version = "1.0", features = ["derive"] }
 lazy_static = "1.5.0"
 serde_json = "1.0"
+static_assertions = "1.1.0"
+log.workspace = true
 
 num-traits = "0.2"
 num-derive = "0.4"
