--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ log = "0.4"
 tokio = { version = "1.39.2", features = ["net", "macros", "rt-multi-thread", "fs", "io-util", "sync"] }
 rayon = "1.10.0"
 uuid = { version = "1.10.0", features = ["serde", "v3"] }
+derive_more = { version = "1.0.0", features = ["full"] }
