--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -9,6 +9,7 @@ fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 fastsnbt = "0.2"
 tokio.workspace = true
 rayon.workspace = true
+derive_more.workspace = true
 itertools = "0.13.0"
 thiserror = "1.0.63"
 futures = "0.3.30"
