--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,8 @@ mc-source-code/DecompilerMC/
 mc-source-code/src/
 mc-source-code/target/
 
-plugins/
-world/
+plugins/*
+world/*
 
 # project's binary configurations
 configuration.toml
