add requested targets

--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -2,6 +2,8 @@
 # Anything in the latest stable version of rust is fine to use.
 channel = "stable"
 targets = [
-    "x86_64-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-gnu",
     "x86_64-pc-windows-msvc",
+    "x86_64-unknown-linux-gnu",
 ]
