Dynamic chunk loading

--- a/pumpkin-entity/Cargo.toml
+++ b/pumpkin-entity/Cargo.toml
@@ -4,5 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+pumpkin-core = { path = "../pumpkin-core"}
+
 num-traits = "0.2"
 num-derive = "0.4"
