--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -14,7 +14,7 @@ itertools = "0.13.0"
 thiserror = "1.0.63"
 futures = "0.3.30"
 flate2 = "1.0.33"
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 lazy_static = "1.5.0"
 serde_json = "1.0"
 static_assertions = "1.1.0"
