--- a/pumpkin-protocol/Cargo.toml
+++ b/pumpkin-protocol/Cargo.toml
@@ -12,7 +12,7 @@ bytes = "1.7"
 
 uuid.workspace = true
 
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 # to parse strings to json responses
 serde_json = "1.0"
 
