--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -18,7 +18,7 @@ pumpkin-protocol = { path = "../pumpkin-protocol"}
 pumpkin-registry = { path = "../pumpkin-registry"}
 
 # config
-serde = { version = "1.0", features = ["derive"] }
+serde.workspace = true
 serde_json = "1.0"
 toml = "0.8.19"
 
