add drag and error handling for containers

--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 num-traits = "0.2"
 num-derive = "0.4"
-
+thiserror = "1.0.63"
+itertools = "0.13.0"
 # For items
 pumpkin-world = { path = "../pumpkin-world"}
