--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -19,5 +19,9 @@ serde_json = "1.0"
 static_assertions = "1.1.0"
 log.workspace = true
 
+noise = "0.9.0"
+
+rand = "0.8.5"
+
 num-traits = "0.2"
 num-derive = "0.4"
