Make a way to disable extism
- Made a `plugins` feature in `pumpkin-plugin`
- Made a `plugins` feature in `pumpkin`, which enables the `plugins` feature in `pumpkin-plugin`
- Made the feature default

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,6 @@ tokio = { version = "1.40", features = [
     "sync",
 ] }
 rayon = "1.10.0"
-uuid = { version = "1.10.0", features = ["serde", "v3"] }
+uuid = { version = "1.10.0", features = ["serde", "v3", "v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
