--- a/pumpkin-plugin/Cargo.toml
+++ b/pumpkin-plugin/Cargo.toml
@@ -3,7 +3,11 @@ name = "pumpkin-plugin"
 version.workspace = true
 edition.workspace = true
 
+[features]
+default = []
+plugins = ["dep:extism"]
+
 [dependencies]
 serde.workspace = true
 log.workspace = true
-extism = "1.6.0"
+extism = { version = "1.6.0", optional = true }
