--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -62,6 +62,8 @@ log.workspace = true
 # networking
 mio = { version = "1.0.2", features = ["os-poll", "net"]}
 
+parking_lot.workspace = true
+crossbeam.workspace = true
 uuid.workspace = true
 tokio.workspace = true
 rayon.workspace = true
