--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -19,6 +19,8 @@ serde_json = "1.0"
 static_assertions = "1.1.0"
 log.workspace = true
 
+parking_lot.workspace = true
+
 noise = "0.9.0"
 
 rand = "0.8.5"
