--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "pumpkin-plugin",
     "pumpkin-protocol/",
     "pumpkin-registry/",
+    "pumpkin-storage",
     "pumpkin-world",
     "pumpkin/",
 ]
@@ -38,6 +39,7 @@ rayon = "1.10.0"
 parking_lot = "0.12.3"
 crossbeam = "0.8.4"
 
+speedy = "0.8.7"
 uuid = { version = "1.10.0", features = ["serde", "v3", "v4"] }
 derive_more = { version = "1.0.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
