--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -10,6 +10,6 @@ pumpkin-world = { path = "../pumpkin-world"}
 num-traits = "0.2"
 num-derive = "0.4"
 thiserror = "1.0.63"
-itertools = "0.13.0"
+itertools.workspace = true
 parking_lot.workspace = true
 crossbeam.workspace = true
