--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,6 @@ derive_more = { version = "1.0.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 
 itertools = "0.13.0"
+
+[profile.dev]
+opt-level = 2
