Introduce a packet Codec and Connection type
This introduces a series of Codecs for encoding and decoding packets, as well as a Connection<T> type which frames streams with encryption and protocol framing.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,7 @@ derive_more = { version = "1.0.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 
 itertools = "0.13.0"
+# Networking Protocol
+tokio-serde = "0.9.0"
+tokio-stream = "0.1.16"
+tokio-util = "0.7.12"
