Move from `image` to `png` crate
We used the famous and good `image` crate to load the favicon. Its a good crate but its in fact has features we don't need, Its in fact a "An Image Processing Library" like it is mentioned on their README. Its also supports multiple image formats which we don't need. The `png` is a PNG & APNG Decoder & Encoder, Exactly what we need. Its about Half the size of the image crate (while only having png feature)

--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -58,7 +58,7 @@ thiserror = "1.0"
 
 # icon loading
 base64 = "0.22.1"
-image = { version = "0.25", default-features = false, features = ["png"] }
+png = "0.17.14" 
 
 # logging
 simple_logger = "5.0.0"
