--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,9 +53,10 @@ jobs:
       - run: cargo test --verbose
   build_release:
     name: Build project in release
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
         toolchain:
           - stable
 
@@ -65,6 +66,11 @@ jobs:
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
 
       - run: cargo build --verbose --release
+      - name: Export executable
+        uses: actions/upload-artifact@v4
+        with:
+          name: pumpkin-${{ matrix.os }}
+          path: target/${{ matrix.target }}/release/pumpkin*
   clippy_release:
     name: Run lints in release mode
     runs-on: ubuntu-latest
@@ -77,5 +83,5 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      
-      - run: cargo clippy --release --all-targets --all-features --no-default-features -- -D warnings 
+
+      - run: cargo clippy --release --all-targets --all-features --no-default-features -- -D warnings
