--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -14,7 +14,12 @@ derive_more.workspace = true
 itertools.workspace = true
 thiserror = "1.0"
 futures = "0.3"
+
+
+# Compression
 flate2 = "1.0"
+lz4 = "1.11.1"
+
 serde.workspace = true
 serde_json = "1.0"
 log.workspace = true
