--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -22,6 +22,8 @@ lz4 = "1.11.1"
 
 serde.workspace = true
 serde_json = "1.0"
+enum_dispatch = "0.3.13"
+
 log.workspace = true
 
 parking_lot.workspace = true
