--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -23,6 +23,7 @@ lz4 = "1.11.1"
 serde.workspace = true
 serde_json = "1.0"
 enum_dispatch = "0.3.13"
+derive-getters = "0.5.0"
 
 log.workspace = true
 
