--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 # For items
 pumpkin-world = { path = "../pumpkin-world" }
+pumpkin-registry = {path = "../pumpkin-registry"}
 pumpkin-macros = { path = "../pumpkin-macros" }
 
 log.workspace = true
