--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -15,3 +15,6 @@ num-derive.workspace = true
 
 # nbt
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
+
+[dev-dependencies]
+serde_json = "1.0.128"
