fix png encoding, default to ./icon.png, use built-in default

--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 # pumpkin
 pumpkin-core = { path = "../pumpkin-core" }
+pumpkin-macros = { path = "../pumpkin-macros" }
 pumpkin-config = { path = "../pumpkin-config" }
 pumpkin-inventory = { path = "../pumpkin-inventory" }
 pumpkin-world = { path = "../pumpkin-world" }
@@ -53,7 +54,7 @@ thiserror = "1.0"
 
 # icon loading
 base64 = "0.22.1"
-png = "0.17.14" 
+png = "0.17.14"
 
 # logging
 simple_logger = { version = "5.0.0", features = ["threads"] }
