--- a/pumpkin-macros/Cargo.toml
+++ b/pumpkin-macros/Cargo.toml
@@ -13,3 +13,7 @@ syn = "2.0"
 serde.workspace = true
 itertools.workspace = true
 serde_json = "1.0.128"
+
+# icon loading
+base64 = "0.22.1"
+png = "0.17.14"
