--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -16,5 +16,5 @@ num-derive.workspace = true
 # nbt
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
 
-[dev-dependencies]
-serde_json = "1.0.128"
+itertools.workspace = true
+serde_json = "1.0.132"
