--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -7,6 +7,8 @@ edition.workspace = true
 # For items
 pumpkin-world = { path = "../pumpkin-world" }
 
+log.workspace = true
+
 num-traits = "0.2"
 num-derive = "0.4"
 thiserror = "1.0.63"
