--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -15,6 +15,15 @@ pumpkin-protocol = { path = "../pumpkin-protocol" }
 pumpkin-registry = { path = "../pumpkin-registry" }
 
 itertools.workspace = true
+log.workspace = true
+crossbeam.workspace = true
+uuid.workspace = true
+tokio.workspace = true
+rayon.workspace = true
+thiserror.workspace = true
+
+num-traits.workspace = true
+num-derive.workspace = true
 
 # config
 serde.workspace = true
@@ -24,8 +33,6 @@ bytes = "1.7"
 
 rand = "0.8.5"
 
-num-traits = "0.2"
-num-derive = "0.4"
 num-bigint = "0.4"
 
 ctrlc = "3.4"
@@ -49,17 +56,9 @@ digest = "=0.11.0-pre.9"
 hmac = "0.12.1"
 sha2 = "0.10.8"
 
-thiserror = "1.0"
-
 # icon loading
 base64 = "0.22.1"
 png = "0.17.14"
 
 # logging
 simple_logger = { version = "5.0.0", features = ["threads"] }
-log.workspace = true
-
-crossbeam.workspace = true
-uuid.workspace = true
-tokio.workspace = true
-rayon.workspace = true
