--- a/pumpkin-inventory/Cargo.toml
+++ b/pumpkin-inventory/Cargo.toml
@@ -8,10 +8,10 @@ edition.workspace = true
 pumpkin-world = { path = "../pumpkin-world" }
 
 log.workspace = true
-
-num-traits = "0.2"
-num-derive = "0.4"
-thiserror = "1.0.63"
 itertools.workspace = true
 crossbeam.workspace = true
 tokio.workspace = true
+thiserror.workspace = true
+
+num-traits.workspace = true
+num-derive.workspace = true
