--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -14,6 +14,7 @@ derive_more.workspace = true
 itertools.workspace = true
 thiserror = "1.0"
 futures = "0.3"
+dashmap = "6.1.0"
 
 # Compression
 flate2 = "1.0"
