Fix chunk loading deadlock and dangling chunk memory (#159)
* rebase to master

* fix chunk unloading

--- a/pumpkin-world/Cargo.toml
+++ b/pumpkin-world/Cargo.toml
@@ -19,6 +19,7 @@ parking_lot.workspace = true
 num-traits.workspace = true
 num-derive.workspace = true
 futures = "0.3"
+dashmap = "6.1.0"
 
 # Compression
 flate2 = "1.0"
