ctrlc: also handle `sigterm` and `sighup` via `termination` feature
This commit enables the `termination` feature in `ctrlc` so that
`sigterm` and `sighup` are also handled on UNIX systems. This in turn
improves Docker compatibility since containers now listen to the
`SIGTERM` signal it sends to containers when trying to stop the
container via `Ctrl-C` whilst attached.

--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -36,7 +36,7 @@ rand = "0.8.5"
 
 num-bigint = "0.4"
 
-ctrlc = "3.4"
+ctrlc = { version = "3.4", features = ["termination"] }
 
 # encryption
 rsa = "0.9.6"
