--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ num-derive = "0.4"
 
 # Concurrency/Parallelism and Synchronization
 rayon = "1.10.0"
-parking_lot = "0.12.3"
+parking_lot = { version = "0.12.3", features = ["send_guard"] }
 crossbeam = "0.8.4"
 
 uuid = { version = "1.11.0", features = ["serde", "v3", "v4"] }
