--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -10,6 +10,8 @@ pumpkin-core = { path = "../pumpkin-core" }
 serde.workspace = true
 serde_json.workspace = true
 
+rayon.workspace = true
+
 num-traits.workspace = true
 num-derive.workspace = true
 
