--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
     "pumpkin-egui",
+    "pumpkin-egui/android",
     "pumpkin-config",
     "pumpkin-core",
     "pumpkin-entity",
