--- a/pumpkin-egui/android/Makefile
+++ b/pumpkin-egui/android/Makefile
@@ -5,8 +5,8 @@ gradle:
 	cd java && gradle wrapper
 
 jni:
-	cargo ndk --target arm64-v8a -o ./java/app/src/main/jniLibs/ build --profile release --offline
-	cargo ndk --target x86_64-linux-android -o ./java/app/src/main/jniLibs/ build --profile release --offline
+	cargo ndk --target arm64-v8a -o ./java/app/src/main/jniLibs/ build --profile release
+	cargo ndk --target x86_64-linux-android -o ./java/app/src/main/jniLibs/ build --profile release
 
 apk: jni
 	cd java && ./gradlew build --stacktrace
