--- a/pumpkin-registry/Cargo.toml
+++ b/pumpkin-registry/Cargo.toml
@@ -9,5 +9,8 @@ pumpkin-core = { path = "../pumpkin-core" }
 
 serde.workspace = true
 
+num-traits.workspace = true
+num-derive.workspace = true
+
 # nbt
 fastnbt = { git = "https://github.com/owengage/fastnbt.git" }
