--- a/pumpkin-egui/pumpkin-egui-android/java/app/build.gradle
+++ b/pumpkin-egui/pumpkin-egui-android/java/app/build.gradle
@@ -7,6 +7,7 @@ android {
     compileSdk 33
 
     defaultConfig {
+        applicationId "local.pumpkin_egui_android"
         minSdk 28
         targetSdk 33
         versionCode 1
@@ -25,4 +26,5 @@ android {
 dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation "androidx.games:games-activity:2.0.2"
+    implementation 'io.github.astonbitecode:j4rs:0.20.0'
 }
