--- a/pumpkin/Cargo.toml
+++ b/pumpkin/Cargo.toml
@@ -29,7 +29,7 @@ parking_lot.workspace = true
 
 # config
 serde.workspace = true
-serde_json = "1.0"
+serde_json.workspace = true
 
 bytes = "1.8"
 
