--- a/pumpkin-egui/Cargo.toml
+++ b/pumpkin-egui/Cargo.toml
@@ -20,7 +20,8 @@ eframe = { version = "0.29", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
-j4rs = "0.20"
+jni = "*"
+ndk-context = "*"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
